--- a/pages/9373.html
+++ b/pages/9373.html
@@ -308,11 +308,159 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='fields_and_quanta'>Fields and quanta</h4>
+
+<div class='hide'>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/photon'>photon</a> - <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a> (abelian <a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/W-boson'>W</a>, <a class='existingWikiWord' href='/nlab/show/W-boson'>Z</a>, <a class='existingWikiWord' href='/nlab/show/W-boson'>B-boson</a> - <a class='existingWikiWord' href='/nlab/show/electroweak+field'>electroweak field</a> (<a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gluon'>gluon</a> - <a class='existingWikiWord' href='/nlab/show/nuclear+force'>strong nuclear force</a> (<a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/graviton'>graviton</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
+</li>
+</ul>
+
+<p><strong>scalar bosons</strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflaton</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>)</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>)</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/electron'>electron</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quark'>quark</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/hadron'>hadron</a></strong> (<a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> of the above <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>)</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/meson'>meson</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/pion'>pion</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/baryon'>baryon</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/proton'>proton</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/neutron'>neutron</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/MSSM'>minimally extended supersymmetric standard model</a></strong></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a>:</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> - <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills field</a></p>
+</li>
+</ul>
+
+<p><a class='existingWikiWord' href='/nlab/show/boson'>bosons</a>:</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a></li>
+</ul>
+
+<p><strong>Exotica</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/preon'>preon</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/axion'>axion</a>, <a class='existingWikiWord' href='/nlab/show/dilaton'>dilaton</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monopole'>monopole</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/dual+graviton'>dual graviton</a></p>
+</li>
+</ul>
+
+<p><strong><span class='newWikiWord'>auxiliary fields<a href='/nlab/new/auxiliary+fields'>?</a></span></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/antifield'>antifield</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>, <a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a>, the BV-<a class='existingWikiWord' href='/nlab/show/antifield'>antifields</a> of the <a class='existingWikiWord' href='/nlab/show/BRST+complex'>BRST</a>-<a class='existingWikiWord' href='/nlab/show/ghost+field'>ghosts</a> are called <em>antighosts</em>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a>, for <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> (to <a class='existingWikiWord' href='/nlab/show/Lorentz+gauge'>Lorentz gauge</a> or similar) a <a class='existingWikiWord' href='/nlab/show/contractible+chain+complex'>contractible chain complex</a> of <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundles</a> is introduced for two <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>-valued <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a>, one in degree zero, called the <em><a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></em>, usually denoted “<math class='maruku-mathml' display='inline' id='mathml_5a5cd081fa577eb856a43b2dba3c0e35ed6fd132_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math>” and one in degree -1, called the <em>antighost field</em>, usually denoted <math class='maruku-mathml' display='inline' id='mathml_5a5cd081fa577eb856a43b2dba3c0e35ed6fd132_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>C</mi><mo>¯</mo></mover></mrow><annotation encoding='application/x-tex'>\overline{C}</annotation></semantics></math>.</p>
+
+<p>Beware that there are also the <a class='existingWikiWord' href='/nlab/show/antifield'>antifields</a> of the <a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost fields</a>, which technically are hence “anti-ghostfields” as opposed to the Nakanishi-Lautrup “antighost-fields”.</p>
+
+<p>Whoever is responsible for this bad terminology should be blamed.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -332,6 +480,14 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id='references'>References</h2>
+
+<p>Review for the case of <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> is in</p>
+
+<ul>
+<li id='Henneaux90'><a class='existingWikiWord' href='/nlab/show/Marc+Henneaux'>Marc Henneaux</a>, section 9.1 of <em>Lectures on the Antifield-BRST formalism for gauge theories</em>, Nuclear Physics B (Proceedings Supplement) 18A (1990) 47-106 (<a href='http://www.math.uni-hamburg.de/home/schweigert/ws07/henneaux2.pdf'>pdf</a>)</li>
+</ul>
+
 <p>
  
 </p>
@@ -345,14 +501,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on February 19, 2013 14:38:34 
+  Revised on October 12, 2017 15:44:26 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (80.81.16.253)
+  (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anti-ghost+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/anti-ghost+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anti-ghost+field/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/anti-ghost+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anti-ghost+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
