--- a/pages/18676.html
+++ b/pages/18676.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      fields and quanta - table in nLab
+      Benny Lautrup in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      fields and quanta - table
+      Benny Lautrup
   </h1>
 
 
@@ -308,158 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/photon'>photon</a> - <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a> (abelian <a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/W-boson'>W</a>, <a class='existingWikiWord' href='/nlab/show/W-boson'>Z</a>, <a class='existingWikiWord' href='/nlab/show/W-boson'>B-boson</a> - <a class='existingWikiWord' href='/nlab/show/electroweak+field'>electroweak field</a> (<a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gluon'>gluon</a> - <a class='existingWikiWord' href='/nlab/show/nuclear+force'>strong nuclear force</a> (<a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/graviton'>graviton</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
-</li>
+    <ul>
+<li><a href='https://en.wikipedia.org/wiki/Benny_Lautrup'>Wikipedia entry</a></li>
 </ul>
 
-<p><strong>scalar bosons</strong></p>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d7671bdfad16282e95e4e022ac5eef88d9f09d54_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflaton</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a>, <a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a></li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>)</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/electron'>electron</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/quark'>quark</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></p>
-</li>
-</ul>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/hadron'>hadron</a></strong> (<a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> of the above <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>)</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/meson'>meson</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/pion'>pion</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/baryon'>baryon</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/proton'>proton</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/neutron'>neutron</a></p>
-</li>
-</ul>
-</li>
-</ul>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/MSSM'>minimally extended supersymmetric standard model</a></strong></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a>:</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> - <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills field</a></p>
-</li>
-</ul>
-
-<p><a class='existingWikiWord' href='/nlab/show/boson'>bosons</a>:</p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a></li>
-</ul>
-
-<p><strong>Exotica</strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/preon'>preon</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/axion'>axion</a>, <a class='existingWikiWord' href='/nlab/show/dilaton'>dilaton</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/monopole'>monopole</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/dual+graviton'>dual graviton</a></p>
-</li>
-</ul>
-
-<p><strong><span class='newWikiWord'>auxiliary fields<a href='/nlab/new/auxiliary+fields'>?</a></span></strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost field</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/antifield'>antifield</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>, <a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></p>
-</li>
-</ul>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on October 12, 2017 15:45:27 
+  Created on October 12, 2017 15:30:19 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fields+and+quanta+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fields+and+quanta+-+table/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/fields+and+quanta+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fields+and+quanta+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Benny+Lautrup" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/fields+and+quanta+-+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Benny+Lautrup" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/fields+and+quanta+-+table" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Benny+Lautrup" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/fields+and+quanta+-+table" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Benny+Lautrup" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
