--- a/pages/9240.html
+++ b/pages/9240.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,7 +308,151 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='content'>Content</h1>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='fields_and_quanta'>Fields and quanta</h4>
+
+<div class='hide'>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/photon'>photon</a> - <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a> (abelian <a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/W-boson'>W</a>, <a class='existingWikiWord' href='/nlab/show/W-boson'>Z</a>, <a class='existingWikiWord' href='/nlab/show/W-boson'>B-boson</a> - <a class='existingWikiWord' href='/nlab/show/electroweak+field'>electroweak field</a> (<a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gluon'>gluon</a> - <a class='existingWikiWord' href='/nlab/show/nuclear+force'>strong nuclear force</a> (<a class='existingWikiWord' href='/nlab/show/Yang-Mills+field'>Yang-Mills field</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/graviton'>graviton</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a></p>
+</li>
+</ul>
+
+<p><strong>scalar bosons</strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflaton</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>)</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>)</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/electron'>electron</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quark'>quark</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/hadron'>hadron</a></strong> (<a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> of the above <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>)</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/meson'>meson</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/pion'>pion</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/baryon'>baryon</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/proton'>proton</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/neutron'>neutron</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/MSSM'>minimally extended supersymmetric standard model</a></strong></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a>:</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gaugino'>gaugino</a> - <a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super Yang-Mills field</a></p>
+</li>
+</ul>
+
+<p><a class='existingWikiWord' href='/nlab/show/boson'>bosons</a>:</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/gluino'>gluino</a></li>
+</ul>
+
+<p><strong>Exotica</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/preon'>preon</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/axion'>axion</a>, <a class='existingWikiWord' href='/nlab/show/dilaton'>dilaton</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monopole'>monopole</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/dual+graviton'>dual graviton</a></p>
+</li>
+</ul>
+
+<p><strong><span class='newWikiWord'>auxiliary fields<a href='/nlab/new/auxiliary+fields'>?</a></span></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/antifield'>antifield</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>, <a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='content'>Content</h1>
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#example'>Example</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
@@ -349,14 +493,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 19, 2013 14:32:53 
+  Revised on October 12, 2017 15:46:20 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (80.81.16.253)
+  (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/antifield" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/antifield/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/antifield" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/antifield" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/antifield" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/antifield/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/antifield" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/antifield" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
