--- a/pages/18677.html
+++ b/pages/18677.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Lorentz gauge in nLab
+      Lorenz gauge in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Lorentz gauge
+      Lorenz gauge
   </h1>
 
 
@@ -902,9 +902,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>For <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> <em>Lorentz gauge</em> is one possible <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> condition: It requests that the <a class='existingWikiWord' href='/nlab/show/divergence'>divergence</a> of the <a class='existingWikiWord' href='/nlab/show/gauge+potential'>gauge potential</a> <math class='maruku-mathml' display='inline' id='mathml_e09bc4614c44f71eac48e45f0581306db6f787dc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/cotangent+bundle'>differential 1-form</a> vanishes: <math class='maruku-mathml' display='inline' id='mathml_e09bc4614c44f71eac48e45f0581306db6f787dc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>⋆</mo><mi>A</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>d \star A = 0</annotation></semantics></math>.</p>
+<p>For <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> the <em>Lorenz gauge condition</em> is one possible <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> condition: It requests that the <a class='existingWikiWord' href='/nlab/show/divergence'>divergence</a> of the <a class='existingWikiWord' href='/nlab/show/gauge+potential'>gauge potential</a> <math class='maruku-mathml' display='inline' id='mathml_e8ebe6fb716e484347357035551739c96dbaf8d5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/cotangent+bundle'>differential 1-form</a> vanishes: <math class='maruku-mathml' display='inline' id='mathml_e8ebe6fb716e484347357035551739c96dbaf8d5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>⋆</mo><mi>A</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>d \star A = 0</annotation></semantics></math>.</p>
 
-<p>On <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> in standard <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinates</a> this is the condition <math class='maruku-mathml' display='inline' id='mathml_e09bc4614c44f71eac48e45f0581306db6f787dc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∂</mo> <mi>μ</mi></msub><msup><mi>A</mi> <mi>μ</mi></msup><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\partial_\mu A^\mu = 0</annotation></semantics></math> (using <a class='existingWikiWord' href='/nlab/show/Einstein+summation+convention'>Einstein summation convention</a>).</p>
+<p>On <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> in standard <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinates</a> this is the condition <math class='maruku-mathml' display='inline' id='mathml_e8ebe6fb716e484347357035551739c96dbaf8d5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∂</mo> <mi>μ</mi></msub><msup><mi>A</mi> <mi>μ</mi></msup><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\partial_\mu A^\mu = 0</annotation></semantics></math> (using <a class='existingWikiWord' href='/nlab/show/Einstein+summation+convention'>Einstein summation convention</a>).</p>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a> this gauge (and its variants) is implement by introducing the auxiliary “<a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a>” together with its “<a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>”, see at <em><a class='existingWikiWord' href='/nlab/show/quantization+of+Yang-Mills+theory'>quantization of Yang-Mills theory</a></em>.</p>
 
@@ -913,25 +913,28 @@ margin-left: 0em;
 <ul>
 <li id='Henneaux90'><a class='existingWikiWord' href='/nlab/show/Marc+Henneaux'>Marc Henneaux</a>, section 9.1 of <em>Lectures on the Antifield-BRST formalism for gauge theories</em>, Nuclear Physics B (Proceedings Supplement) 18A (1990) 47-106 (<a href='http://www.math.uni-hamburg.de/home/schweigert/ws07/henneaux2.pdf'>pdf</a>)</li>
 </ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on October 12, 2017 15:47:57 
+  Revised on October 12, 2017 16:46:19 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lorentz+gauge" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Lorenz+gauge" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lorenz+gauge/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Lorenz+gauge" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lorenz+gauge" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Lorentz+gauge" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Lorenz+gauge" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Lorentz+gauge" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Lorenz+gauge" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Lorentz+gauge" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Lorenz+gauge" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
