--- a/pages/18675.html
+++ b/pages/18675.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -319,7 +319,7 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li>
@@ -389,7 +389,7 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/MSSM'>minimally extended supersymmetric standard model</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/super+multiplet'>superpartner</a> <a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong></p>
 
 <p><a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a>:</p>
 
@@ -456,7 +456,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a>, for <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> (to <a class='existingWikiWord' href='/nlab/show/Lorentz+gauge'>Lorentz gauge</a> or similar) a <a class='existingWikiWord' href='/nlab/show/contractible+chain+complex'>contractible chain complex</a> of <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundles</a> is introduced for two <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>-valued <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a>, one in degree zero, called the <em>Nakanishi-Lautrup field</em>, usually denoted “<math class='maruku-mathml' display='inline' id='mathml_1e8410f0f82e24fff4b589e909814cfb4fe9da39_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math>” and one in degree -1, called the <em><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a></em>, usually denoted <math class='maruku-mathml' display='inline' id='mathml_1e8410f0f82e24fff4b589e909814cfb4fe9da39_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>C</mi><mo>¯</mo></mover></mrow><annotation encoding='application/x-tex'>\overline{C}</annotation></semantics></math>. See at <em><a class='existingWikiWord' href='/nlab/show/quantization+of+Yang-Mills+theory'>quantization of Yang-Mills theory</a></em>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a>, for <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> (to <a class='existingWikiWord' href='/nlab/show/Lorenz+gauge'>Lorenz gauge</a> or similar) a <a class='existingWikiWord' href='/nlab/show/contractible+chain+complex'>contractible chain complex</a> of <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundles</a> is introduced for two <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>-valued <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a>, one in degree zero, called the <em>Nakanishi-Lautrup field</em>, usually denoted “<math class='maruku-mathml' display='inline' id='mathml_052984b2a2ecf6fe17e913d3147251ee9f42d2e1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math>” and one in degree -1, called the <em><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a></em>, usually denoted <math class='maruku-mathml' display='inline' id='mathml_052984b2a2ecf6fe17e913d3147251ee9f42d2e1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>C</mi><mo>¯</mo></mover></mrow><annotation encoding='application/x-tex'>\overline{C}</annotation></semantics></math>. See at <em><a class='existingWikiWord' href='/nlab/show/quantization+of+Yang-Mills+theory'>quantization of Yang-Mills theory</a></em>.</p>
 
 <p>Beware that there are also the <a class='existingWikiWord' href='/nlab/show/antifield'>antifields</a> of the <a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost fields</a>, which technically are hence “anti-ghostfields” as opposed to the Nakanishi-Lautrup “antighost-fields”. Whoever is responsible for this bad terminology should be blamed.</p>
 
@@ -482,10 +482,16 @@ margin-left: 0em;
 
 <p>Named after <a class='existingWikiWord' href='/nlab/show/Benny+Lautrup'>Benny Lautrup</a> and some Nakanishi who is sometimes misspelled as “Takanishi”.</p>
 
-<p>Review for the case of <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> is in</p>
+<p>Review for the case of <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> and with <a class='existingWikiWord' href='/nlab/show/path+integral'>path integral</a> terminology is in</p>
 
 <ul>
 <li id='Henneaux90'><a class='existingWikiWord' href='/nlab/show/Marc+Henneaux'>Marc Henneaux</a>, section 9.1 of <em>Lectures on the Antifield-BRST formalism for gauge theories</em>, Nuclear Physics B (Proceedings Supplement) 18A (1990) 47-106 (<a href='http://www.math.uni-hamburg.de/home/schweigert/ws07/henneaux2.pdf'>pdf</a>)</li>
+</ul>
+
+<p>while discussion for general <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> in the context of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>/<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative algebraic quantum field theory</a> is in</p>
+
+<ul>
+<li id='Rejzner16'><a class='existingWikiWord' href='/nlab/show/Katarzyna+Rejzner'>Katarzyna Rejzner</a>, section 7.2 of <em>Perturbative Algebraic Quantum Field Theory</em>, Mathematical Physics Studies, Springer 2016 (<a href='https://link.springer.com/book/10.1007%2F978-3-319-25901-7'>web</a>)</li>
 </ul>
 
 <p>
@@ -505,14 +511,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on October 12, 2017 15:48:36 
+  Revised on October 12, 2017 16:46:41 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Nakanishi-Lautrup+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Nakanishi-Lautrup+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Nakanishi-Lautrup+field/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Nakanishi-Lautrup+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Nakanishi-Lautrup+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
