--- a/pages/18679.html
+++ b/pages/18679.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      anti-ghost field in nLab
+      auxiliary field in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      anti-ghost field
+      auxiliary field
   </h1>
 
 
@@ -453,76 +453,42 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a>, for <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> (to <a class='existingWikiWord' href='/nlab/show/Lorenz+gauge'>Lorenz gauge</a> or similar) a <a class='existingWikiWord' href='/nlab/show/contractible+chain+complex'>contractible chain complex</a> of <a class='existingWikiWord' href='/nlab/show/auxiliary+field'>auxiliary</a> <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundles</a> is introduced for two <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>-valued <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a>, one in degree zero, called the <em><a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></em>, usually denoted “<math class='maruku-mathml' display='inline' id='mathml_36cca90f8db244e82c273e596b4b06431e8db48a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math>” and one in degree -1, called the <em>antighost field</em>, usually denoted <math class='maruku-mathml' display='inline' id='mathml_36cca90f8db244e82c273e596b4b06431e8db48a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>C</mi><mo>¯</mo></mover></mrow><annotation encoding='application/x-tex'>\overline{C}</annotation></semantics></math>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> an “auxiliary field” is a <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/type'>type</a> that is introduced on top of the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in the <a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a> genuinely of interest, in order to bring that field theory of actual interest into another form – usually while not actually changing it up to <a class='existingWikiWord' href='/nlab/show/equivalence'>equivalence</a> – which lends itself better to certain purposes.</p>
 
-<p>Beware that there are also the <a class='existingWikiWord' href='/nlab/show/antifield'>antifields</a> of the <a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost fields</a>, which technically are hence “anti-ghostfields” as opposed to the Nakanishi-Lautrup “antighost-fields”.</p>
+<h2 id='examples'>Examples</h2>
 
-<p>Whoever is responsible for this bad terminology should be blamed.</p>
+<p>For example under suitable conditions a field theory with <a class='existingWikiWord' href='/nlab/show/first+class+constraint'>constraints</a> may be formulated equivalently as another field theory without explicit constraints, but with an auxiliary <a class='existingWikiWord' href='/nlab/show/Lagrange+multiplier'>Lagrange multiplier</a> field which does induce that constraint after all, but indirectly so via its <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equation of motion</a>.</p>
 
-<h2 id='related_concepts'>Related concepts</h2>
+<p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a>, a powerful generalization of this idea of <a class='existingWikiWord' href='/nlab/show/Lagrange+multiplier'>Lagrange multiplier</a> is the usage of auxiliary fields that allow to define “<a class='existingWikiWord' href='/nlab/show/gauge+fixing+fermion'>gauge fixing fermions</a>” to implement <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> via their <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a>.</p>
 
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+<p>For instance in the <a class='existingWikiWord' href='/nlab/show/quantization+of+Yang-Mills+theory'>quantization of Yang-Mills theory</a> the <em><a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></em> (and its “<a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>”) are auxiliary fields that are introduced in order to indirectly induce <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> to <a class='existingWikiWord' href='/nlab/show/Lorenz+gauge'>Lorentz gauge</a>. The <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a> also makes precise how exactly this introduction of auxiliary fields does not change the field theory, up to <a class='existingWikiWord' href='/nlab/show/equivalence'>equivalence</a>: the auxiliary fields change the <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST complex</a> (which effectivley defines the field theory) only up to a <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a>, i.e. the relevant notion of <a class='existingWikiWord' href='/nlab/show/equivalence'>equivalence</a> in this context.</p>
 
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost</a>,</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/antifield'>antifield</a>, <strong>antighost</strong></p>
-</li>
-</ul>
-</li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<p>Review for the case of <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> and with <a class='existingWikiWord' href='/nlab/show/path+integral'>path integral</a> terminology is in</p>
-
-<ul>
-<li id='Henneaux90'><a class='existingWikiWord' href='/nlab/show/Marc+Henneaux'>Marc Henneaux</a>, section 9.1 of <em>Lectures on the Antifield-BRST formalism for gauge theories</em>, Nuclear Physics B (Proceedings Supplement) 18A (1990) 47-106 (<a href='http://www.math.uni-hamburg.de/home/schweigert/ws07/henneaux2.pdf'>pdf</a>)</li>
-</ul>
-
-<p>while discussion for general <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> in the context of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>/<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative algebraic quantum field theory</a> is in</p>
-
-<ul>
-<li id='Rejzner16'><a class='existingWikiWord' href='/nlab/show/Katarzyna+Rejzner'>Katarzyna Rejzner</a>, section 7.2 of <em>Perturbative Algebraic Quantum Field Theory</em>, Mathematical Physics Studies, Springer 2016 (<a href='https://link.springer.com/book/10.1007%2F978-3-319-25901-7'>web</a>)</li>
-</ul>
+<p>In fact even before it comes to <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a>, <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a> introduces a variety of auxiliary fields: the <a class='existingWikiWord' href='/nlab/show/ghost+field'>ghosts</a>, the <a class='existingWikiWord' href='/nlab/show/ghost+field'>ghosts-of-ghosts</a>, etc., and the <a class='existingWikiWord' href='/nlab/show/antifield'>antifields</a>.</p>
 
 <p>
- 
-</p>
-
-<p>
-</p>
-
-<p>
- 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on October 12, 2017 18:20:07 
+  Created on October 12, 2017 18:22:31 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (77.56.177.247)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anti-ghost+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anti-ghost+field/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/anti-ghost+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anti-ghost+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/auxiliary+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/anti-ghost+field" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/auxiliary+field" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/anti-ghost+field" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/auxiliary+field" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/anti-ghost+field" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/auxiliary+field" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
