--- a/pages/18630.html
+++ b/pages/18630.html
@@ -308,18 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    
+    <p>see <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>geometry of physics -- A first idea of quantum field theory</a></em></p>
 </div>
 
 <div class="revisedby">
-  Revised on September 25, 2017 18:18:49 
+  Revised on October 13, 2017 04:10:43 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.105.77.106)
+  (192.41.132.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/A+first+idea+of+quantum+field+theory+%3E+history" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/A+first+idea+of+quantum+field+theory+%3E+history/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/A+first+idea+of+quantum+field+theory+%3E+history" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/A+first+idea+of+quantum+field+theory+%3E+history" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/A+first+idea+of+quantum+field+theory+%3E+history" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/A+first+idea+of+quantum+field+theory+%3E+history/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/A+first+idea+of+quantum+field+theory+%3E+history" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/A+first+idea+of+quantum+field+theory+%3E+history" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
