--- a/pages/18080.html
+++ b/pages/18080.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,18 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Undergraduate student in Physics, Computer Science and Mathematics at Massey University, New Zealand</p>
+    <p>Undergraduate student in Physics, Computer Science and Mathematics from New Zealand</p>
 </div>
 
 <div class="revisedby">
-  Created on March 18, 2017 16:24:43 
+  Revised on October 13, 2017 05:22:28 
   by <a class="existingWikiWord" href="/nlab/show/Samuel+Dobson">Samuel Dobson</a>
-  (103.29.31.59)
+  (2407:7000:8301:8333:6a5d:43ff:fedf:a313)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Samuel+Dobson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Samuel+Dobson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Samuel+Dobson/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Samuel+Dobson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Samuel+Dobson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
