--- a/pages/1838.html
+++ b/pages/1838.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -899,7 +899,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p><strong>Electromagnetism</strong> or <strong>electrodynamics</strong> is the <a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theory</a> whose <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> is the <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, see there for more details.</p>
@@ -972,19 +972,43 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id='references'>References</h2>
+
+<p>Discussion of electromagnetism as <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>quantum field theory on curved spacetimes</a> originates with</p>
+
+<ul>
+<li id='Dimock92'><a class='existingWikiWord' href='/nlab/show/Jonathan+Dimock'>Jonathan Dimock</a>, <em>Quantized Electromagnetic Field on a Manifold</em>, Reviews in Mathematical Physics, Volume 04, Issue 02, 1992 (<a href='https://doi.org/10.1142/S0129055X92000078'>doi:10.1142/S0129055X92000078</a>)</li>
+</ul>
+
+<p>and is further developed in (e.g. regarding <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard states</a>) in</p>
+
+<ul>
+<li>
+<p>K. Sanders, <a class='existingWikiWord' href='/nlab/show/Claudio+Dappiaggi'>Claudio Dappiaggi</a>, T.-P. Hack, <em>Electromagnetism, local covariance, the Aharonov-Bohm effect and Gauss’ law</em>, Commun. Math. Phys. 328(2), 625–667 (2014)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Claudio+Dappiaggi'>Claudio Dappiaggi</a>, D. Siemssen, <em>Hadamard states for the vector potential on asymptotically flat spacetimes</em>, Rev. Math. Phys. 25, 1 (2013)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Claudio+Dappiaggi'>Claudio Dappiaggi</a>, B. Lang, <em>Quantization of Maxwell’s equations on curved backgrounds and general local covariance</em>, Lett. Math. Phys. 101(3), 265–287 (2012)</p>
+</li>
+</ul>
+
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on April 29, 2013 20:18:57 
+  Revised on October 13, 2017 13:10:43 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.138.79)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/electromagnetism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electromagnetism/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/electromagnetism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electromagnetism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/electromagnetism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electromagnetism/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/electromagnetism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electromagnetism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
