--- a/pages/7618.html
+++ b/pages/7618.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -573,7 +573,7 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Mike+Shulman'>Mike Shulman</a>, (<a href='http://golem.ph.utexas.edu/category/2011/04/homotopy_type_theory_vi.html#c041358'>blog comment</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Peter+LeFanu+Lumsdaine'>Peter Lumsdaine</a> and <a class='existingWikiWord' href='/nlab/show/Mike+Shulman'>Mike Shulman</a>, Semantics of higher inductive types, 2017, <a href='https://arxiv.org/abs/1705.07088'>arxiv</a></li>
 </ul>
 
 <p>
@@ -600,14 +600,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 13, 2014 04:03:29 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (31.185.129.212)
+  Revised on October 15, 2017 07:55:26 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/initial+algebra+of+a+presentable+%28infinity%2C1%29-monad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/initial+algebra+of+a+presentable+%28infinity%2C1%29-monad/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/initial+algebra+of+a+presentable+%28infinity%2C1%29-monad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/initial+algebra+of+a+presentable+%28infinity%2C1%29-monad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/initial+algebra+of+a+presentable+%28infinity%2C1%29-monad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/initial+algebra+of+a+presentable+%28infinity%2C1%29-monad/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/initial+algebra+of+a+presentable+%28infinity%2C1%29-monad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/initial+algebra+of+a+presentable+%28infinity%2C1%29-monad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
