--- a/pages/80.html
+++ b/pages/80.html
@@ -368,7 +368,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#scope'>Scope</a></li><li><a href='#nonscope'>Nonscope</a></li><li><a href='#idea_of_relevance_of_higher_categories'>Idea of relevance of higher categories</a></li><li><a href='#metaphysics'>Metaphysics</a></li><li><a href='#enquiry'>Enquiry</a></li><li><a href='#philosophical_sentiments'>Philosophical sentiments</a></li><li><a href='#references_and_links'>References and links</a><ul><li><a href='#related_entries'>Related entries</a></li><li><a href='#general'>General</a></li><li><a href='#books'>Books</a></li><li><a href='#articles'>Articles</a></li><li><a href='#blog_and_forum_discussions_conferences'>Blog and forum discussions, conferences</a></li></ul></li></ul></div>
 <h2 id='scope'>Scope</h2>
 
-<p>In the philosophical part of <math class='maruku-mathml' display='inline' id='mathml_2885606ba01feb076d22af0fb2f8763c165c540b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab we discuss higher category theory and its repercussions in philosophy. More widely, the future entries on philosophy in nLab should also contain <a class='existingWikiWord' href='/nlab/show/philosophy+of+mathematics'>philosophy of mathematics</a> in general, and of <a class='existingWikiWord' href='/nlab/show/foundations+and+logic'>logic and foundations</a> in particular. As it is usual for philosophy and the study of thought, it is usefully carried on via study of historical thinkers and their ideas, hence some idea-related aspects of the <a class='existingWikiWord' href='/nlab/show/history+of+mathematics'>history of mathematics</a> are welcome.</p>
+<p>In the philosophical part of <math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab we discuss higher category theory and its repercussions in philosophy. More widely, the future entries on philosophy in nLab should also contain <a class='existingWikiWord' href='/nlab/show/philosophy+of+mathematics'>philosophy of mathematics</a> in general, and of <a class='existingWikiWord' href='/nlab/show/foundations+and+logic'>logic and foundations</a> in particular. As it is usual for philosophy and the study of thought, it is usefully carried on via study of historical thinkers and their ideas, hence some idea-related aspects of the <a class='existingWikiWord' href='/nlab/show/history+of+mathematics'>history of mathematics</a> are welcome.</p>
 
 <h2 id='nonscope'>Nonscope</h2>
 
@@ -406,7 +406,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>Homotopy type theory</a> may be thought of as a vertical categorification of logic to <math class='maruku-mathml' display='inline' id='mathml_2885606ba01feb076d22af0fb2f8763c165c540b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infinity,1)</annotation></semantics></math>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>Homotopy type theory</a> may be thought of as a vertical categorification of logic to <math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infinity,1)</annotation></semantics></math>.</p>
 </li>
 
 <li>
@@ -511,7 +511,7 @@ margin-left: 0em;
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/adjoint+modality'>unity of opposites</a>
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/becoming'>becoming</a> <math class='maruku-mathml' display='inline' id='mathml_2885606ba01feb076d22af0fb2f8763c165c540b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace'>:</mo></mrow><annotation encoding='application/x-tex'>\colon</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/nothing'>nothing</a> <math class='maruku-mathml' display='inline' id='mathml_2885606ba01feb076d22af0fb2f8763c165c540b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/being'>being</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/becoming'>becoming</a> <math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace'>:</mo></mrow><annotation encoding='application/x-tex'>\colon</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/nothing'>nothing</a> <math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/being'>being</a></li>
 </ul>
 </li>
 </ul>
@@ -591,7 +591,7 @@ margin-left: 0em;
 
 <li>M. G. Katz, Thomas Mormann, <em>Infinitesimals as an issue in neo-Kantian philosophy of science</em>, <a href='http://arxiv.org/abs/1304.1027'>arxiv/1304.1027</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Mikhail+Gromov'>Mikhail Gromov</a>, <em>Ergostructures, Ergologic and the Universal Learning Problem: Chapters 1, 2.</em>, <a href='http://www.ihes.fr/~gromov/PDF/ergologic3%27(1).pdf'>pdf</a>; <em>Structures, Learning and Ergosystems: Chapters 1-4, 6</em> (2011) <a href='http://www.ihes.fr/~gromov/PDF/ergobrain.pdf'>pdf</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Mikhail+Gromov'>Mikhail Gromov</a>, <em>Ergostructures, Ergologic and the Universal Learning Problem: Chapters 1, 2, 3.</em> (2013) <a href='http://www.ihes.fr/~gromov/PDF/ergologic3.1.pdf'>pdf</a>; <em>Structures, Learning and Ergosystems: Chapters 1-4, 6</em> (2011) <a href='http://www.ihes.fr/~gromov/PDF/ergobrain.pdf'>pdf</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>William Lawvere</a>, <em><a class='existingWikiWord' href='/nlab/show/Cohesive+Toposes+and+Cantor%27s+%22lauter+Einsen%22'>Cohesive Toposes and Cantor&#39;s &quot;lauter Einsen&quot;</a></em></li>
 
@@ -607,9 +607,9 @@ margin-left: 0em;
 <h3 id='blog_and_forum_discussions_conferences'>Blog and forum discussions, conferences</h3>
 
 <ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_2885606ba01feb076d22af0fb2f8763c165c540b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Café on Mathematical reality: <a href='http://golem.ph.utexas.edu/category/2008/10/mathematical_reality.html'>I</a>, <a href='http://golem.ph.utexas.edu/category/2008/11/mathematical_robustness.html'>II</a></li>
+<li><math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Café on Mathematical reality: <a href='http://golem.ph.utexas.edu/category/2008/10/mathematical_reality.html'>I</a>, <a href='http://golem.ph.utexas.edu/category/2008/11/mathematical_robustness.html'>II</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Gavin+Wraith'>Gavin</a> wrote about “The dangers of category theory”, see <math class='maruku-mathml' display='inline' id='mathml_2885606ba01feb076d22af0fb2f8763c165c540b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Forum <a href='http://www.math.ntnu.no/~stacey/Mathforge/nForum/comments.php?DiscussionID=2472&amp;Focus=21255#Comment_21255'>here</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Gavin+Wraith'>Gavin</a> wrote about “The dangers of category theory”, see <math class='maruku-mathml' display='inline' id='mathml_8298a718574841cd0e844ddc247b4d6efd3a4098_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Forum <a href='http://www.math.ntnu.no/~stacey/Mathforge/nForum/comments.php?DiscussionID=2472&amp;Focus=21255#Comment_21255'>here</a></li>
 
 <li>Simplicityonference: Ideals of Practice in Mathematics &amp; the Arts; videos online at youtube <a href='http://s-i-m-p-l-i-c-i-t-y.org/videos.html'>channel</a></li>
 </ul>
@@ -622,14 +622,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 15, 2017 08:50:52 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
-  (212.91.105.73)
+  Revised on October 15, 2017 18:44:30 
+  by <a class="existingWikiWord" href="/nlab/show/Daniel+Luckhardt">Daniel Luckhardt</a>
+  (2a02:810d:640:56d0:218a:d21f:fef9:31ae)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/philosophy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/philosophy/69" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(69 revisions)</span> | <a href="/nlab/show/diff/philosophy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/philosophy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/philosophy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/philosophy/70" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(70 revisions)</span> | <a href="/nlab/show/diff/philosophy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/philosophy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
